tests/neg/parser_funcptr_alias_nested_signature.baa
// RUN: expect-fail
// EXPECT: غير مدعوم: استخدام نوع بديل لمؤشر دالة داخل توقيع مؤشر دالة

نوع أ = دالة(صحيح) -> صحيح.
نوع ب = دالة(أ) -> صحيح.

صحيح الرئيسية() {
    إرجع ٠.
}

